# KCPUInfo

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  KCPUInfo.kdev4  README.md  cmake_uninstall.cmake  ecm_uninstall.cmake
src/: CMakeLists.txt  Messages.sh  cpuinformationaquirer.cpp  cpuinformationaquirer.h  kcpuinfo.cpp  kcpuinfo.desktop  kcpuinfo.h  kcpuinfo.ui  kcpuinfo_automoc.cpp.files  main.cpp  mainboardinformationaquirer.cpp  mainboardinformationaquirer.h  moc_kcpuinfo.cpp
